crates/lmml-tui/src/tabs/snapshots/lmml_tui__tabs__tests__detect_missing_prereqs.snap
---
source: crates/lmml-tui/src/tabs/mod.rs
expression: render_app(&app)
---
"┌lmml | runtime: auto | build: upstream──────────────────────────────────────────────────────────────────────┐"
"│ 1 Detect │ 2 Build │ 3 Models │ 4 Server │ 5 Settings                                                      │"
"└────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌System──────────────────────────────────────────┐┌Probe Log─────────────────────────────────────────────────┐"
"│[MISS] compiler not found                       ││Missing C++ compiler: sudo apt install build-essential    │"
"│[MISS] cmake 3.10.0 detected; need >= 3.21      ││                                                          │"
"│[MISS] git not found                            ││                                                          │"
"│[WARN] nvcc not found; CUDA backend unavailable ││                                                          │"
"│[WARN] GPU: none detected                       ││                                                          │"
"│[WARN] sccache not found; repeat builds will be ││                                                          │"
"│[OK] RAM: 1 GB available / 4 GB total           ││                                                          │"
"│[MISS] disk: 1 GB free at /tmp                  ││                                                          │"
"│[OK] recommended backend: CpuAvx                ││                                                          │"
"│                                                ││                                                          │"
"│Missing prerequisites                           ││                                                          │"
"│[MISS] C++ compiler: sudo apt install build-esse││                                                          │"
"│[MISS] cmake >= 3.21: sudo apt install cmake    ││                                                          │"
"│[MISS] git >= 2.28: sudo apt install git        ││                                                          │"
"│[MISS] 4 GB free disk: free disk space in the lm││                                                          │"
"│                                                ││                                                          │"
"│Warnings                                        ││                                                          │"
"│[WARN] cmake 3.10.0 detected; 3.21+ required    ││                                                          │"
"│[WARN] sccache not found; repeat builds will be ││                                                          │"
"│                                                ││                                                          │"
"│                                                ││                                                          │"
"│                                                ││                                                          │"
"│                                                ││                                                          │"
"│                                                ││                                                          │"
"│                                                ││                                                          │"
"│                                                ││                                                          │"
"│                                                ││                                                          │"
"│                                                ││                                                          │"
"└────────────────────────────────────────────────┘└──────────────────────────────────────────────────────────┘"
"lmml  Server: stopped  Ready  [?] Help  [q] Quit                                                              "
