crates/lmml-tui/src/tabs/snapshots/lmml_tui__tabs__tests__first_run_onboarding.snap
---
source: crates/lmml-tui/src/tabs/mod.rs
expression: render_app(&app)
---
"┌lmml────────────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│ 1 Detect │ 2 Build │ 3 Models │ 4 Server │ 5 Settings                                                      │"
"└────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌Settings────────────────────────────────────────┐┌Compatibility─────────────────────────────────────────────┐"
"│Up/Down select. e edits. Space toggles. s saves.││Binary: $HOME/.local/share/lmml/bin/llama-server   │"
"│State path: $HOME/.config/lmml/state.toml││Version: llama-server test                                │"
"│                                                ││Flags parsed: 2                                           │"
"│  host          127.0.0.1  [e]                  ││                                                          │"
"│> port          8080  [e]                       ││Unsupported settings:                                     │"
"│  ctx_size      4096  ┌First run─────────────────────────────────────────────────────┐ llama-server build   │"
"│  n_gpu_layers  -1  [e│                        Welcome to lmml                       │                      │"
"│  batch_size    512  [│                                                              │                      │"
"│  ubatch_size   512  [│     Scan your system, build llama.cpp for this hardware,     │                      │"
"│  threads       8  [e]│      then manage local GGUF models and the server here.      │                      │"
"│  flash_attn    true  │                                                              │                      │"
"│  mlock         false │                Press d to scan prerequisites.                │                      │"
"│  api_key         [e] │             Press Enter to go straight to Build.             │                      │"
"│  jinja         false │               Press Esc to dismiss this guide.               │                      │"
"│  chat_template   [e] │                                                              │                      │"
"│  extra_args      [e] │                                                              │                      │"
"│                      │                                                              │                      │"
"│                      │                                                              │                      │"
"│                      │                                                              │                      │"
"│                      │                                                              │                      │"
"│                      └──────────────────────────────────────────────────────────────┘                      │"
"│                                                ││                                                          │"
"│                                                ││                                                          │"
"│                                                ││                                                          │"
"│                                                ││                                                          │"
"│                                                ││                                                          │"
"│                                                ││                                                          │"
"│                                                ││                                                          │"
"└────────────────────────────────────────────────┘└──────────────────────────────────────────────────────────┘"
"lmml  Server: stopped  Ready  [?] Help  [q] Quit                                                              "
