crates/lmml-tui/src/tabs/snapshots/lmml_tui__tabs__tests__first_run_onboarding_server_port.snap
---
source: crates/lmml-tui/src/tabs/mod.rs
expression: render_app(&app)
---
"┌lmml | runtime: auto | build: upstream──────────────────────────────────────────────────────────────────────┐"
"│ 1 Detect │ 2 Build │ 3 Models │ 4 Server │ 5 Settings                                                      │"
"└────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌Settings────────────────────────────────────────┐┌Compatibility─────────────────────────────────────────────┐"
"│Up/Down select. e edits. Space toggles. s saves.││Binary: $HOME/.local/share/lmml/llama.cpp/build/bin│"
"│State path: $HOME/.config/lmml/state.toml││Version: llama-server test                                │"
"│                                                ││Flags parsed: 2                                           │"
"│  build_runtime upstream  [e]                   ││                                                          │"
"│  runtime       auto  [e]                       ││Unsupported settings:                                     │"
"│  host          127.0.┌First run─────────────────────────────────────────────────────┐ llama-server build   │"
"│> port          8080  │                        Welcome to lmml                       │                      │"
"│  ctx_size      262144│                                                              │                      │"
"│  n_gpu_layers  -1  [e│                   Step 6 of 7: server port.                  │                      │"
"│  batch_size    512  [│                                                              │                      │"
"│  ubatch_size   512  [│                             8080                             │                      │"
"│  threads       8  [e]│                                                              │                      │"
"│  flash_attn    true  │                  Type port. Enter confirms.                  │                      │"
"│  mlock         false │                                                              │                      │"
"│  api_key         [e] │                                                              │                      │"
"│  jinja         false │                                                              │                      │"
"│  chat_template   [e] │                                                              │                      │"
"│  extra_args      [e] │                                                              │                      │"
"│                      │                                                              │                      │"
"│Error: port must be be│                                                              │                      │"
"│                      └──────────────────────────────────────────────────────────────┘                      │"
"│                                                ││                                                          │"
"│                                                ││                                                          │"
"│                                                ││                                                          │"
"│                                                ││                                                          │"
"│                                                ││                                                          │"
"│                                                ││                                                          │"
"│                                                ││                                                          │"
"└────────────────────────────────────────────────┘└──────────────────────────────────────────────────────────┘"
"lmml  Server: stopped  Ready  [?] Help  [q] Quit                                                              "
